# code-tandem

./: .eslintrc.json  .gitignore  .npmignore  .prettierignore  AI_GATED_PROGRESSION.md  AI_INTEGRATION_GUIDE.md  AUTOMATIC_PROGRESSION_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  CLI_REFERENCE.md  GETTING_STARTED.md  MCP_SERVER_DESIGN.md  MCP_USAGE_GUIDE.md  NEW_USER_FLOW.md  PROFICIENCY_SYSTEM.md  PROFICIENCY_UPDATE_SUMMARY.md  README.md  ZED_MCP_SETUP.md  ZED_QUICK_START.md  build.spec  conerns.txt  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.claude/: mcp-config-example.json
.github/workflows/: build.yml  ci.yml  (+1 more)
.taskmaster/: config.json  state.json
codetandem/: __init__.py  code_parser.py  config.py  curriculum.py  docs_ingestion.py  linter.py  main.py  modules.py  review.py  scanner.py  secrets.py  state.py  tandem.py  taskmaster_integration.py  vector_store.py
codetandem.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: API.md  COMMANDS.md  FAQ.md  README.md
src/: cli.ts  index.ts
tests/: __init__.py  test_code_parser.py  test_commands_config.py  test_commands_init.py  test_config.py  test_curriculum.py  test_docs_ingestion.py  test_linter.py  test_modules.py  test_providers_anthropic.py  test_providers_base.py  test_providers_factory.py  test_providers_gemini.py  test_providers_openai.py  test_review.py  test_scanner.py  test_secrets.py  test_state.py  test_tandem.py  test_tandem_ai.py  test_tandem_prompt.py  test_taskmaster_integration.py
(+75 files in other folders)
